# redoor

./: .gitignore  .oxlintrc.json  .prettierrc  .prototools  AGENTS.md  Cargo.toml  README.md  agents.toml  build.rs  code-review.md  config.toml  index.html  install.sh  opencode.json  package.json  plan.md  pnpm-lock.yaml  ractor-review.md  refactor-plan.md  rust-toolchain.toml  tsconfig.json  vitest.config.ts
.github/workflows/: release.yml
.opencode/command/: commit.md
.opencode/plans/: 1768639434383-shiny-knight.md  (+17 more)
bindings/: AgentDetailsResponse.ts  AgentId.ts  AgentInfoResponse.ts  CatResponse.ts  ChunkIndex.ts  CopyEndpoint.ts  CopyFileRequest.ts  CopyFileResponse.ts  CreateDirectoryResponse.ts  EchoRequest.ts  EchoResponse.ts  LsDirectoryResponse.ts  LsEntry.ts  LsFileResponse.ts  LsResponse.ts  MetadataResponse.ts  RawDeleteResponse.ts  RawUploadResponse.ts  RequestId.ts  SocketId.ts  TransferDirection.ts  TransferId.ts  TransferProgressEntry.ts  TransferProgressListResponse.ts  TransferProgressState.ts  TransferProgressUpdate.ts  UiEvent.ts  UnixTimestampSeconds.ts
plans/: agent-log-file.md  agent-watchdog.md  all-agent-transfer-progress-api.md  conditional-content-disposition-and-mime-detection.md  streaming-download-cleanup.md
redoor-ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
scripts/: build-and-test  dev  generate-ts-bindings  opencode-web  redoor  redoor-agent  release.mts  toxiproxy-bandwidth-only  vite
src/: agent.rs  agent_types.rs  commands.rs  lib.rs  logging.rs  main.rs  ssh.rs  streaming.rs  types.rs  watchdog.rs
tests/: agents.test.ts  create-directory.test.ts  metadata.test.ts  raw-copy.test.ts  raw-delete.test.ts  raw-download.test.ts  raw-transfer-toxiproxy.test.ts  raw-upload-toxiproxy.test.ts  raw-upload.test.ts  test-utils.ts  watchdog.test.ts
ui/: .cta.json  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
(+87 files in other folders)
