[package]
name = "redoor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
