[package]
name = "redoor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "redoor"
path = "src/main.rs"

[[bin]]
name = "redoor-agent"
path = "src/bin/redoor-agent.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
ractor = "0.15.10"
ts-rs = "11.1.0"
sysinfo = "0.33"
