[package]
name = "redoor"
version = "0.0.3"
edition = "2024"

[[bin]]
name = "redoor"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = "0.4"
ts-rs = "11.1.0"
sysinfo = "0.33"
tower-http = { version = "0.6", features = ["cors"] }
nix = { version = "0.30.1", features = ["user"] }
fastrand = "2.0"
async-stream = "0.3"
bytes = "1.0"
mime_guess = "2.0.5"
headers = "0.4"
tar = "0.4.45"
clap = { version = "4.6.0", features = ["derive", "env"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
reqwest = { version = "0.13.4", features = ["stream"] }
axum-embed = "0.1.0"
rust-embed = "8.11"
